<resources>
    <string name="app_name">Chime</string>

    <string name="pref_key_enabled">enabled</string>
    <string name="pref_title_enabled_true">On</string>
    <string name="pref_title_enabled_false">Off</string>

    <string name="pref_title_speech">Speech</string>

    <string name="pref_key_lang">lang</string>
    <string name="pref_title_lang">Language</string>

    <string name="pref_key_voice">voice</string>
    <string name="pref_title_voice">Voice</string>

    <string name="pref_key_speed">speed</string>
    <string name="pref_title_speed">Speed</string>

    <string name="pref_key_test">speak_test</string>
    <string name="pref_title_test">Speak test</string>

    <string name="pref_title_alarm">Alarm</string>

    <string name="pref_key_interval">interval</string>
    <string name="pref_title_interval">Interval</string>
    <string-array name="pref_entries_interval">
        <item>15 mins</item>
        <item>30 mins</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_values_interval">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="pref_default_interval">15</string>

    <string name="pref_key_silent">silent_hours</string>
    <string name="pref_title_silent">Silent time</string>

    <string name="pref_key_dnd">do_not_disturb</string>
    <string name="pref_title_dnd">Do not Disturb</string>

    <string name="pref_key_devices">sound_devices</string>
    <string name="pref_title_devices">Sound devices</string>
    <string name="pref_entry_speaker">Speaker</string>
    <string name="pref_entry_wired">Wired</string>
    <string name="pref_entry_bt">Bluetooth</string>
    <string-array name="pref_entries_devices">
        <item>@string/pref_entry_speaker</item>
        <item>@string/pref_entry_wired</item>
        <item>@string/pref_entry_bt</item>
    </string-array>
    <string-array name="pref_values_devices">
        <item>@string/pref_entry_speaker</item>
        <item>@string/pref_entry_wired</item>
        <item>@string/pref_entry_bt</item>
    </string-array>
    <string-array name="pref_default_devices">
        <item>@string/pref_entry_wired</item>
        <item>@string/pref_entry_bt</item>
    </string-array>
</resources>
