<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="@string/pref_key_enabled"
            android:defaultValue="true"/>

    <PreferenceCategory
            android:title="@string/pref_title_speech">

        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
                android:key="@string/pref_key_voice"
                android:icon="@drawable/record_voice_over"
                android:title="@string/pref_title_voice"/>

        <ListPreference
                android:key="@string/pref_key_speed"
                android:icon="@drawable/slow_motion_video"
                android:title="@string/pref_title_speed"/>

        <Preference
                android:key="@string/pref_key_test"
                android:icon="@drawable/hearing"
                android:title="@string/pref_title_test"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_title_alarm">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
        <ListPreference
                android:key="@string/pref_key_interval"
                android:icon="@drawable/hourglass_empty"
                android:title="@string/pref_title_interval"
                android:defaultValue="@string/pref_default_interval"
                android:entries="@array/pref_entries_interval"
                android:entryValues="@array/pref_values_interval"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <!--Preference
                android:key="@string/pref_key_silent_hours"
                android:title="@string/pref_title_silent_hours"/-->

        <CheckBoxPreference
                android:key="@string/pref_key_dnd"
                android:icon="@drawable/do_not_disturb_on"
                android:title="@string/pref_title_dnd"
                android:defaultValue="true"/>

        <MultiSelectListPreference
                android:key="@string/pref_key_devices"
                android:icon="@drawable/headset"
                android:title="@string/pref_title_devices"
                android:entries="@array/pref_entries_devices"
                android:entryValues="@array/pref_values_devices"
                android:defaultValue="@array/pref_default_devices"
                android:negativeButtonText="@null"/>

    </PreferenceCategory>

</PreferenceScreen>
